Fixed links on small viewports

--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,14 @@ ul {
 li {
     display: inline;
     padding: 0 2em 0 0;
+    /*margin-top: 48px;*/
 }
+li a{line-height:1.8;}@media(min-width:60em){li a{line-height:1.2;}}
+/*li:first-child {*/
+    /*margin-top:0;*/
+/*}*/
 a{
+    white-space: nowrap;
     position: relative;
 }
 .click-link:after{
